<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:background="@color/color6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <com.kakao.sdk.link.sample.common.widget.KakaoDialogSpinner
            xmlns:kakao="http://schemas.android.com/apk/res/com.kakao.sdk.link.sample"
            android:id="@+id/text"
            style="@style/spinner"
            kakao:kakao_prompt="@string/text_type"
            kakao:kakao_icon="@drawable/icon_link_01"
            kakao:kakao_entries="@array/text_types"/>

        <ImageView
            android:background="@color/color4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"/>

        <com.kakao.sdk.link.sample.common.widget.KakaoDialogSpinner
            xmlns:kakao="http://schemas.android.com/apk/res/com.kakao.sdk.link.sample"
            android:id="@+id/image"
            style="@style/spinner"
            kakao:kakao_prompt="@string/image_type"
            kakao:kakao_icon="@drawable/icon_link_02"
            kakao:kakao_entries="@array/image_types"/>

        <ImageView
            android:background="@color/color4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"/>

        <com.kakao.sdk.link.sample.common.widget.KakaoDialogSpinner
            xmlns:kakao="http://schemas.android.com/apk/res/com.kakao.sdk.link.sample"
            android:id="@+id/link"
            style="@style/spinner"
            kakao:kakao_prompt="@string/link_type"
            kakao:kakao_icon="@drawable/icon_link_03"
            kakao:kakao_entries="@array/link_types"/>

        <ImageView
            android:background="@color/color4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"/>

        <com.kakao.sdk.link.sample.common.widget.KakaoDialogSpinner
            xmlns:kakao="http://schemas.android.com/apk/res/com.kakao.sdk.link.sample"
            android:id="@+id/button"
            style="@style/spinner"
            kakao:kakao_prompt="@string/button_type"
            kakao:kakao_icon="@drawable/icon_link_04"
            kakao:kakao_entries="@array/button_types"/>

        <ImageView
            android:background="@color/color4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"/>

        <LinearLayout
                android:id="@+id/forwardable_box"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/selector_item_bg"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/menu_icon"
                android:background="@drawable/icon_link_05"
                android:layout_width="48dp"
                android:layout_height="48dp"/>

            <TextView
                android:id="@+id/menu_title"
                android:text="@string/kakaolink_title_forwardable"
                android:textColor="@color/color3"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/forwardable"
                android:checked="false"
                android:clickable="true"
                android:focusable="true"
                android:button="@drawable/selector_check_box"
                android:layout_gravity="end|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <ImageView
            android:background="@color/color4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="57dp">

            <Button
                android:id="@+id/send"
                android:layout_weight="1"
                style="@style/button"
                android:background="@drawable/btn_b"
                android:text="@string/send_button" />

            <ImageView
                android:visibility="invisible"
                android:layout_width="8dp"
                android:layout_height="fill_parent"/>

            <Button
                android:id="@+id/clear"
                android:layout_weight="1"
                android:background="@drawable/btn_c"
                style="@style/button"
                android:text="@string/clear_button" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>